# duck_rdf

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  TODO.md  extension_config.cmake  sql2rdf-fix-r2rml-datatypes.patch  vcpkg.json
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: CMakeDependencyCheck.yml  MainDistributionPipeline.yml
docs/: functions.md  typemapping.md
src/: execute_sparql.cpp  pivot_rdf.cpp  profile_rdf.cpp  r2rml_copy.cpp  rdf_extension.cpp  rdf_multi_file.cpp  rdf_profiler.cpp  rdf_triples_factory.cpp  rdf_xml_parser.cpp  read_rdf_prefixes.cpp  serd_buffer.cpp  serd_range_buffer.cpp  sparql_reader.cpp  sparql_to_sql.cpp  table_filter_eval.cpp  xml_buffer.cpp
src/include/: I_triples_buffer.hpp  execute_sparql.hpp  pivot_rdf.hpp  profile_rdf.hpp  r2rml_copy.hpp  rdf_multi_file.hpp  rdf_profiler.hpp  rdf_triples_factory.hpp  read_rdf_prefixes.hpp  serd_buffer.hpp  serd_range_buffer.hpp  sparql_to_sql.hpp  string_util.hpp  table_filter_eval.hpp  xml_buffer.hpp
test/r2rml/: full_r2rml.yml  full_r2rml_lower.ttl  full_r2rml_lower.yml  full_r2rml_quoted.ttl  full_r2rml_quoted.yml  inside_out.yml  inside_out_lower.ttl  inside_out_lower.yml  parallel_map.ttl  streaming_map.ttl  streaming_map.yml  typed_cols.ttl  typed_cols.yml
test/rdf/: pivot_test.nt  pivot_test.trig  tests.nq.zst  tests.trig  tests.ttl
test/rdf/pivot_edge/: scenario1_interleaved.nt  scenario2_fileA.nt  scenario2_fileB.nt  scenario3_mixed_lang_plain.nt  scenario4_duplicate_lang.nt  scenario5_invalid_typed.nt  scenario6_mixed_datatypes.nt  scenario7_duplicate_triples.nt  scenario8_same_subject_graphs.nq  scenario9_blank_nodes.nt
test/rdf/regression_compares/: standard.nq  standard.nt  standard.rdf  standard.trig  standard.ttl
test/sql/: execute_sparql.test  file_type_mismatch.test  filename.test  filter_pushdown.test  function_metadata.test  glob.test  gz_compression.test  include_filenames.test  parse_regressions.test  pivot_rdf.test  pivot_rdf_edge.test  prefix_expansion.test  profile_rdf.test  projection_pushdown.test  rdf.test  read_rdf_parallel_ranges.test  read_rdf_prefixes.test  read_sparql_integration.test  sparql_to_sql.test  sql2rdf.test  strict_parsing.test  write_rdf.test  write_rdf_parallel.test  write_rdf_streaming.test  zst_compression.test
test/wasm-smoke-test/: README.md  package-lock.json  package.json  sample.ttl  test-wasm-load.mjs
test/xmlrdf/: example07.rdf.zst
